--- a/example3/index.html
+++ b/example3/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+    <title>Lecture 02 Assignment</title>
 	<head>
 		<meta charset="utf-8">
 		<title>S1 - Lecture 2 - Example 3</title>
